--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -7,9 +7,9 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-xs-10">
+        <div class="col">
         </div>
-        <div class="col-xs-2">
+        <div class="col">
             <my-app>Loading...</my-app>
         </div>
     </div>
