--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf8">
-    <title>ERES 3.0</title>
+	<title>ChatJS</title>
+	<base href="/">
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col">
-        </div>
-        <div class="col">
-            <my-app>Loading...</my-app>
-        </div>
-    </div>
-</div>
+	<script type="text/javascript" src="polyfills.js"></script>
+	<script type="text/javascript" src="vendor.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
