--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf8">
-    <title>ERES 3.0</title>
+    <meta charset="UTF-8">
+    <title>ERES 3</title>
+    <link rel="icon" type="image/x-icon" href="../../rso-eres3/src/frontend/src/favicon.ico"/>
 </head>
 <body>
+<link rel="stylesheet" type="text/css" href="style.bundle.css"/>
+
 <div class="container">
-    <div class="row">
-        <div class="col">
-        </div>
-        <div class="col">
-            <my-app>Loading...</my-app>
-        </div>
+
+    <div class="starter-template">
+        <hello-world-app></hello-world-app>
     </div>
+
 </div>
+
+<script src="polyfill.bundle.js"></script>
+<script src="main.bundle.js"></script>
+
 </body>
 </html>
