--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -2,22 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ERES 3</title>
+    <title>ERES 3.0</title>
     <link rel="icon" type="image/x-icon" href="../../rso-eres3/src/frontend/src/favicon.ico"/>
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="style.bundle.css"/>
 
-<div class="container">
-
-    <div class="starter-template">
-        <hello-world-app></hello-world-app>
-    </div>
-
-</div>
+<app></app>
 
 <script src="polyfill.bundle.js"></script>
 <script src="main.bundle.js"></script>
-
 </body>
 </html>
