- strona logowania - początki routingu, strony głównej, strony błędu

--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/">
     <meta charset="UTF-8">
     <title>ERES 3.0</title>
     <link rel="icon" type="image/x-icon" href="../../rso-eres3/src/frontend/src/favicon.ico"/>
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="style.bundle.css"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-blue.min.css">
 
 <app></app>
 
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script src="polyfill.bundle.js"></script>
 <script src="main.bundle.js"></script>
 </body>
