Working GET requests (if the authentication is off) and basic app structure

--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/">
     <meta charset="UTF-8">
     <title>ERES 3</title>
     <link rel="icon" type="image/x-icon" href="../../rso-eres3/src/frontend/src/favicon.ico"/>
@@ -10,9 +11,7 @@
 
 <div class="container">
 
-    <div class="starter-template">
-        <hello-world-app></hello-world-app>
-    </div>
+    <eres3></eres3>
 
 </div>
 
