--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -4,14 +4,15 @@
     <base href="/">
     <meta charset="UTF-8">
     <title>ERES 3.0</title>
-    <link rel="icon" type="image/x-icon" href="../../rso-eres3/src/frontend/src/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="style.bundle.css"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-blue.min.css">
 
-<eres3></eres3>
+<app></app>
+
 <script src="polyfill.bundle.js"></script>
 <script src="main.bundle.js"></script>
 </body>
