Subjects component added Layout unification for data tables

--- a/src/frontend/tests/units/tests/unit specializations add.html
+++ b/src/frontend/tests/units/tests/unit specializations add.html
@@ -47,7 +47,7 @@
 	<td>label=SPECIALITY</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+    <td>click</td>
 	<td>//div/div[2]/button</td>
 	<td></td>
 </tr>
