--- a/src/frontend/tests/units/tests/unit add.html
+++ b/src/frontend/tests/units/tests/unit add.html
@@ -37,7 +37,7 @@
 	<td>Instytut Elektroniki</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+    <td>click</td>
 	<td>//div/div[2]/button</td>
 	<td></td>
 </tr>
