basic frontend tests fix

--- a/src/frontend/tests/permission/tests/permission add.html
+++ b/src/frontend/tests/permission/tests/permission add.html
@@ -18,12 +18,12 @@
 </tr>
 <tr>
 	<td>storeCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>rowCount</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//th[4]/button</td>
+	<td>css=permissions div&gt;button:last-of-type</td>
 	<td></td>
 </tr>
 <tr>
@@ -37,13 +37,13 @@
 	<td>Test Desc</td>
 </tr>
 <tr>
-    <td>click</td>
+	<td>clickAndWait</td>
 	<td>//div/div[2]/button</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>${rowCount}</td>
 </tr>
 <tr>
