--- a/src/frontend/tests/permission/tests/permission delete.html
+++ b/src/frontend/tests/permission/tests/permission delete.html
@@ -18,22 +18,22 @@
 </tr>
 <tr>
 	<td>storeCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>rowCount</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=tr:last-of-type td button</td>
+	<td>css=tr:last-of-type button</td>
 	<td></td>
 </tr>
 <tr>
-    <td>click</td>
+	<td>clickAndWait</td>
 	<td>//button[2]</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>${rowCount}</td>
 </tr>
 </tbody></table>
