--- a/src/frontend/tests/units/tests/unit specializations delete.html
+++ b/src/frontend/tests/units/tests/unit specializations delete.html
@@ -18,27 +18,27 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=table tr:nth-last-child(2) td:nth-of-type(3) button</td>
+	<td>css=tbody tr:last-of-type button:first-of-type</td>
 	<td></td>
 </tr>
 <tr>
 	<td>storeCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>rowCount</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=tbody tr:last-of-type td:last-of-type button</td>
+	<td>css=tbody tr:last-of-type td:last-of-type button:last-of-type</td>
 	<td></td>
 </tr>
 <tr>
-    <td>click</td>
+	<td>clickAndWait</td>
 	<td>//button[2]</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>${rowCount}</td>
 </tr>
 <tr>
