--- a/src/frontend/tests/permission/tests/permission edit.html
+++ b/src/frontend/tests/permission/tests/permission edit.html
@@ -17,9 +17,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>verifyText</td>
+	<td>storeText</td>
 	<td>css=tr:last-of-type td:nth-of-type(2)</td>
-	<td>Test Desc</td>
+	<td>lastname</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -32,14 +32,14 @@
 	<td> edit</td>
 </tr>
 <tr>
-    <td>click</td>
+	<td>clickAndWait</td>
 	<td>//div/div[2]/button</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
 	<td>css=tr:last-of-type td:nth-of-type(2)</td>
-	<td>Test Desc edit</td>
+	<td>${lastname} edit</td>
 </tr>
 </tbody></table>
 </body>
