--- a/src/frontend/tests/units/tests/unit delete.html
+++ b/src/frontend/tests/units/tests/unit delete.html
@@ -18,22 +18,22 @@
 </tr>
 <tr>
 	<td>storeCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>rowCount</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=table tr:nth-last-child(2) td:nth-of-type(2) button</td>
+	<td>css=tbody tr:last-of-type button:last-of-type</td>
 	<td></td>
 </tr>
 <tr>
-    <td>click</td>
+	<td>clickAndWait</td>
 	<td>//div/div[2]/button[2]</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>${rowCount}</td>
 </tr>
 </tbody></table>
