--- a/src/frontend/tests/units/tests/unit edit.html
+++ b/src/frontend/tests/units/tests/unit edit.html
@@ -18,17 +18,17 @@
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>css=table tbody tr:nth-last-child(2) td:first-of-type</td>
+	<td>css=table tbody tr:last-of-type td:first-of-type</td>
 	<td>lastname</td>
 </tr>
 <tr>
 	<td>storeCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>rowCount</td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>css=table tbody tr:nth-last-child(2) td:nth-of-type(2) button</td>
+	<td>clickAndWait</td>
+	<td>css=table tr:last-of-type button:last-of-type</td>
 	<td></td>
 </tr>
 <tr>
@@ -37,18 +37,18 @@
 	<td> edit</td>
 </tr>
 <tr>
-    <td>click</td>
+	<td>click</td>
 	<td>//div/div[2]/button</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>${rowCount}</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>css=table tbody tr:nth-last-child(2) td:first-of-type</td>
+	<td>css=table tbody tr:last-of-type td:first-of-type</td>
 	<td>${lastname} edit</td>
 </tr>
 </tbody></table>
