--- a/src/frontend/tests/units/tests/unit specializations add.html
+++ b/src/frontend/tests/units/tests/unit specializations add.html
@@ -18,17 +18,17 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=table tr:nth-last-child(2) td:nth-of-type(3) button</td>
+	<td>css=table tbody tr:last-of-type button:first-of-type</td>
 	<td></td>
 </tr>
 <tr>
 	<td>storeCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>rowCount</td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>css=table th button</td>
+	<td>clickAndWait</td>
+	<td>css=specializations-tree button:last-of-type</td>
 	<td></td>
 </tr>
 <tr>
@@ -47,24 +47,24 @@
 	<td>label=SPECIALITY</td>
 </tr>
 <tr>
-    <td>click</td>
+	<td>clickAndWait</td>
 	<td>//div/div[2]/button</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyNotCssCount</td>
-	<td>css=table tr</td>
+	<td>css=table tbody tr</td>
 	<td>${rowCount}</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>css=table tr:last-of-type td:first-of-type</td>
-	<td>Elektronika Specjalna</td>
+	<td>css=table tbody tr:last-of-type td:first-of-type</td>
+	<td>ES</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>css=table tr:last-of-type td:nth-of-type(2)</td>
-	<td>ES</td>
+	<td>css=table tbody tr:last-of-type td:nth-of-type(2)</td>
+	<td>Elektronika Specjalna</td>
 </tr>
 </tbody></table>
 </body>
