Add/edit modal added.

--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <base href="/">
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERES 3.0</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 </head>
 <body>
 <link rel="stylesheet" type="text/css" href="style.bundle.css"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-blue.min.css">
+<link rel="stylesheet" href="material.min.css">
 
 <app></app>
 
 <script src="polyfill.bundle.js"></script>
 <script src="main.bundle.js"></script>
-</body>
+<script src="material.min.js"></script>
 </html>
