Specializations view updated, subjects CRUD added.

--- a/src/frontend/src/index.html
+++ b/src/frontend/src/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <base href="/">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>ERES 3.0</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
 </head>
