--- a/src/frontend/tests/allTests.html
+++ b/src/frontend/tests/allTests.html
@@ -13,10 +13,11 @@
 <tr><td><a href="units/tests/unit edit.html">unit edit</a></td></tr>
 <tr><td><a href="units/tests/unit specializations add.html">unit specializations add.html</a></td></tr>
 <tr><td><a href="units/tests/unit specializations delete.html">unit specialization delete</a></td></tr>
+<tr><td><a href="units/tests/subjects add">subject add</a></td></tr>
+<tr><td><a href="units/tests/subjects delete">subject delete</a></td></tr>
 <tr><td><a href="units/tests/unit delete.html">unit delete</a></td></tr>
-<tr><td><a href="permission/tests/permission add.html">permission add</a></td></tr>
 <tr><td><a href="permission/tests/permission edit.html">permission edit</a></td></tr>
-<tr><td><a href="permission/tests/permission delete.html">permission delete</a></td></tr>
+<tr><td><a href="personsTest">tests/person add.html</a></td></tr>
 </tbody></table>
 </body>
 </html>
