--- a/src/frontend/tests/units/tests/unit specializations delete.html
+++ b/src/frontend/tests/units/tests/unit specializations delete.html
@@ -23,11 +23,11 @@
 </tr>
 <tr>
 	<td>storeCssCount</td>
-	<td>css=table tbody tr</td>
+	<td>css=#table tbody tr</td>
 	<td>rowCount</td>
 </tr>
 <tr>
-	<td>click</td>
+	<td>clickAndWait</td>
 	<td>css=tbody tr:last-of-type td:last-of-type button:last-of-type</td>
 	<td></td>
 </tr>
@@ -38,7 +38,7 @@
 </tr>
 <tr>
 	<td>verifyNotCssCount</td>
-	<td>css=table tbody tr</td>
+	<td>css=#table tbody tr</td>
 	<td>${rowCount}</td>
 </tr>
 <tr>
