--- a/src/frontend/tests/persons/personsTest.html
+++ b/src/frontend/tests/persons/personsTest.html
@@ -8,7 +8,7 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="tests/permission edit.html">permission edit</a></td></tr>
+<tr><td><a href="personsTest">tests/person add.html</a></td></tr>
 </tbody></table>
 </body>
 </html>
