--- a/src/frontend/tests/persons/tests/person add.html
+++ b/src/frontend/tests/persons/tests/person add.html
@@ -4,68 +4,74 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://localhost:9000/permissions" />
-<title>unit specializations add</title>
+<title>person add</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">unit specializations add</td></tr>
+<tr><td rowspan="1" colspan="3">person add</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/units</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=table tbody tr:last-of-type button:first-of-type</td>
+	<td>/persons</td>
 	<td></td>
 </tr>
 <tr>
 	<td>storeCssCount</td>
 	<td>css=#table tbody tr</td>
-	<td>rowCount</td>
+	<td>${rowCount}</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=specializations-tree #table-container button:last-of-type</td>
+	<td>css=#table-container&gt;div&gt;button:last-of-type</td>
 	<td></td>
 </tr>
 <tr>
 	<td>sendKeys</td>
-	<td>id=fullName</td>
-	<td>Elektronika Specjalna</td>
+	<td>id=name</td>
+	<td>Tester</td>
 </tr>
 <tr>
 	<td>sendKeys</td>
-	<td>id=shortName</td>
-	<td>ES</td>
+	<td>id=otherNames</td>
+	<td>Tester</td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=surname</td>
+	<td>Tester</td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=pesel</td>
+	<td>12345678901</td>
+</tr>
+<tr>
+	<td>sendKeys</td>
+	<td>id=login</td>
+	<td>testestest</td>
 </tr>
 <tr>
 	<td>select</td>
-	<td>id=type</td>
-	<td>label=Specjalizacja</td>
+	<td>id=unit</td>
+	<td>label=Wydział Elektroniki i Technik Informacyjnych</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>click</td>
 	<td>//div/div[2]/button</td>
 	<td></td>
+</tr>
+<tr>
+	<td>verifyText</td>
+	<td>css=#table tbody tr:last-of-type td:first-of-type</td>
+	<td>testestest</td>
 </tr>
 <tr>
 	<td>verifyNotCssCount</td>
 	<td>css=#table tbody tr</td>
 	<td>${rowCount}</td>
 </tr>
-<tr>
-	<td>verifyText</td>
-	<td>css=table tbody tr:last-of-type td:first-of-type</td>
-	<td>ES</td>
-</tr>
-<tr>
-	<td>verifyText</td>
-	<td>css=table tbody tr:last-of-type td:nth-of-type(2)</td>
-	<td>Elektronika Specjalna</td>
-</tr>
+
 </tbody></table>
 </body>
 </html>
