--- a/src/frontend/tests/allTests.html
+++ b/src/frontend/tests/allTests.html
@@ -17,7 +17,7 @@
 <tr><td><a href="units/tests/subjects delete">subject delete</a></td></tr>
 <tr><td><a href="units/tests/unit delete.html">unit delete</a></td></tr>
 <tr><td><a href="permission/tests/permission edit.html">permission edit</a></td></tr>
-<tr><td><a href="personsTest">tests/person add.html</a></td></tr>
+<tr><td><a href="persons/tests/person add.html">person add</a></td></tr>
 </tbody></table>
 </body>
 </html>
